@@ -1,5 +1,9 @@
 Version 1.4.3
 ------------------------------------------------------------------
+8 March 2007
++ Changed sticky mechanism from saving via the object method. Switched
+  to cleaner db method.
+
 7 March 2007
 +  Removed fake French translation.
 
